# brainvault

./: .dockerignore  .env.example  .gitignore  ALL_ISSUES_FIXED.md  CHANGELOG.md  CONTINUATION_PROMPT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  EDITOR_ACTUALLY_FIXED.md  EDITOR_FIX_COMPLETE.md  FIXES_APPLIED.md  LATEST_FIXES.md  LICENSE  PRODUCTION_CHECKLIST.md  README.md  SECURITY.md  START.md  docker-compose.yml  package-lock.json  package.json  setup-rust-backend.sh  start-dev.sh  start.sh  tailwind.config.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
browser-extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
browser-extension/icons/: .gitkeep
docker/: nginx.conf
e2e/: notes.spec.ts  playwright.config.ts
server/: BACKEND_SETUP.md  DEPLOYMENT_COMPLETE.md  FULL_STACK_GUIDE.md  index.js  package-lock.json  package.json  start-dev.sh  test-backend.sh
server/routes/: ai.js  attachments.js  auth.js  notes.js  search.js  settings.js
server/services/: database.js  vault.js  watcher.js
server/vault/templates/: daily.md  meeting.md  project.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  lib.rs  main.rs  vault.rs
src/components/: ErrorBoundary.tsx
src/components/AI/: AIChat.tsx
src/lib/: ai.ts  api.ts  export.ts  import.ts  tauri-api.ts  templates.ts  utils.ts
src/stores/: notesStore.ts  settingsStore.ts  uiStore.ts
src/styles/: globals.css
src/test/: setup.ts
src/types/: index.ts
(+21 files in other folders)
